dev/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: dev
  labels:
    app: dev
    environment: production
spec:
  selector:
    app: dev
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
